# movs-mlops-2023

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cancer-model.dvc  data.dvc  docker-compose.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: ci.yaml
cmd/: gen_dataset.py
configs/: infer.yaml.j2  train.yaml.j2
experiments/: base.py  click_options.py  infer.py  options.py  settings.py  train.py  trainer.py  utils.py
experiments/classification/: __init__.py  exp.py
experiments/cmd/: infer.py  train.py
movs_mlops_2023/datasets/: collator.py  dvc.py  jsonl.py
movs_mlops_2023/models/: __init__.py  model.py
scripts/: cancer_dataset.py  gen_dataset.py
src/datasets/: jsonl.py
src/models/: __init__.py  model.py
